@@ -1,3 +1,7 @@
+2004-10-20 Bart Hakvoort  <gparted@users.sf.net>
+
+	* src/Dialog_Base_Partition.cc (Get_New_Partition): Tweaked resizingbehaviour a bit. This solved some minor annoyances.
+
 2004-10-18 Bart Hakvoort  <gparted@users.sf.net>
 
 	* src/Dialog_Partition_New.cc: changed width of optionmenus from 150 to 160 pixels. (in certain langs the strings didn't fit)
